src/rust/items/snapshots/syn_state_machine__rust__items__modules__tests__concat_idents! (parse it_matches_inline).snap
---
source: src/rust/items/modules.rs
expression: "crate::parse::<Module<Infallible, Ident>>(q.clone())"
---
Ok(
    Inline(
        false,
        Ident(
            hello,
        ),
        P2(
            Rep(
                [],
            ),
            Rep(
                [
                    Ident(
                        hello,
                    ),
                    Ident(
                        world,
                    ),
                ],
            ),
        ),
    ),
)
