src/rust/items/snapshots/syn_state_machine__rust__items__modules__tests__concat_idents! (parse it_matches_sourced).snap
---
source: src/rust/items/modules.rs
expression: "crate::parse::<Module<Infallible, Infallible>>(q.clone())"
---
Ok(
    Sourced(
        false,
        Ident(
            hello,
        ),
    ),
)
